--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -47,6 +47,15 @@
                         <i class="fas fa-external-link-alt ms-1" style="font-size: 0.75em;"></i>
                     </a>
                 </li>
+                <li class="nav-item" x-show="!serverMode && isServiceAvailable('radiotracking')">
+                    <a class="nav-link" 
+                       :href="(window.BASE_URL || '') + '/radiotracking/'" 
+                       target="_blank" 
+                       title="VHF Signals (External)">
+                        <i class="fas fa-chart-line me-1"></i>VHF Signals
+                        <i class="fas fa-external-link-alt ms-1" style="font-size: 0.75em;"></i>
+                    </a>
+                </li>
             </ul>
             <div class="navbar-nav ms-auto">
                 <div class="nav-item d-flex align-items-center">
